# cpp-weekly-game-project

./: .clang-tidy  .cmake-format.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  pre-commit.yml  scorecard.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/cpp_weekly_game_project/: sample_library.hpp
src/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
